-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.7.2
-
None
-
-
236c6ec6f (dev), 1079d210d (6.8), 27321bb7f (6.7)
-
2024wk32s2FOQtforAndroid, 2024wk34s2FOQtforAndroid
Trying to build Qt 6.7.2 against NDK r27 runs into:
/home/dev/.conan/data/android_ndk_installer/r27/bje/stable/package/47a5957842a59e110cd830aaab2922c58e79a9a4/toolchains/llvm/prebuilt/linux-x86_64/sysroot/usr/include/c++/v1/__utility/declval.h:31:17: error: static assertion failed due to requirement '!__is_same(int, int)': std::declval can only be used in an unevaluated context. It's likely that your current usage is trying to extract a value from the function.
31 | static_assert(!__is_same(_Tp, _Tp),
| ^~~~~~~~~~~~~~~~~~~~
/home/dev/.conan/data/qt/6.7.2/bje/stable/source/qt6/qtbase/src/corelib/kernel/qjnitypes.h:130:26: note: in instantiation of function template specialization 'std::declval<int>' requested here
130 | return function(std::declval<Args>()...);
| ^
- is required for
-
QTBUG-127804
Pulse - NDK27 builds with Qt on one host and application builds on same host
-
- Closed
-
- mentioned in
-
Page Loading...